--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Title</title>
+		<title>SquareFlakes</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Header</h1>
+			<h1>SquareFlakes</h1>
 		</header>
 			<section id="content">
 				<canvas id="OriginalFractal" data-processing-sources="OriginalFractal.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Controls: <br>
+		    Press A to create one fractal <br>
+		    Press S to create a rotated fractal <br>
+		    Press D to create both <br>
+		    Press Q to increase size <br>
+		    Press W to decrease sieze <br>
+		    Press E to change color mode <br>
 	    </footer>
 	</body>
 </html>
